<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pin_content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/crossBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/cross_icn" />


    <TextView
        android:id="@+id/otpTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:gravity="center"
        android:text="@string/enter_otp_on_email"
        android:textStyle="normal" />

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/pin_layout"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otpTxt"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="6"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:pinAnimationType="popIn"
        app:pinBackgroundIsSquare="true"
        app:pinCharacterSpacing="12dp"
        app:pinLineColors="@color/black_disabled"
        app:pinLineStroke="2dp"
        app:pinLineStrokeSelected="2dp"
        app:pinTextBottomPadding="4dp" />

    <TextView
        android:id="@+id/resendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/resend_otp" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"

        android:foreground="?attr/selectableItemBackground"
        android:text="Verify"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary" />

</RelativeLayout>




